--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,41 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Virtual environment
+venv/
+env/
+ENV/
+.venv/
+.env/
+
+# Flask instance folder
+instance/
+
+# Alembic / migrations
+migrations/__pycache__/
+migrations/versions/__pycache__/
+
+# Logs
+*.log
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Python test cache
+.pytest_cache/
+.coverage
+*.cover
+*.py,cover
+
+# IDE / Editor configs
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# ENV files
 .env
+.env.*
